# wyrdcraeft

./: .bumpversion.cfg  .gitignore  .readthedocs.yaml  AGENTS.md  AUTHORS.txt  LICENSE.txt  MANIFEST.in  Makefile  README.md  THIRD_PARTY_NOTICES.md  context7.json  old_english_json_format.md  pyproject.toml  requirements.txt
.aidex/: index.db  index.db-shm  index.db-wal
.github/workflows/: update-requirements.yml
data/: README.md  c_palatalization_force_palatalize.txt  oe_bt_macron_index.json  pyproject.toml
data/ocr/: wright_live_benchmark_report.json  wright_matrix_case_ctx10240_q5.json  wright_matrix_case_ctx10240_q8.json  wright_matrix_case_ctx8192_q5.json  wright_matrix_case_ctx8192_q8.json  wright_matrix_case_wright2_ctx10240_q8.json  wright_matrix_case_wright2_ctx8192_q8.json  wright_matrix_probe.json
data/ocr/rules/: old_english_safe.tsv
data/ocr/wordlists/: old_english_seed.txt
data/oe_ingest/schema/: models.py
data/tests/: test_golden_regression.py
data/tests/fixtures/: expected_dialogue.json  expected_prose.json  expected_verse.json  fixture_dialogue.txt  fixture_prose.txt  fixture_verse.txt
data/tools/: build_macron_index.py  refresh_goldens.py
doc/quality/: README.md  napoleon_gate_baseline.json
doc/source/: changelog.rst  conf.py  index.rst
doc/source/api/: client.rst  models.rst
doc/source/architecture/: index.rst  morphology_refactor_baseline.rst  morphology_refactor_spec.rst
doc/source/overview/: command_convert_fix_diacritic.rst  command_convert_mark_diacritics.rst  command_diacritic_add.rst  command_diacritic_delete.rst  command_diacritic_disambiguate.rst  command_morphology_generate.rst  command_morphology_generate_reference_snapshots.rst  command_settings.rst  command_source_convert.rst  configuration.rst  configuration_cli.rst  faq.rst  format.rst  installation.rst  morphology_perl_quirks_ledger.rst  quickstart.rst  usage.rst  using_cli.rst  using_client.rst  wright_paradigms.rst
doc/source/runbook/: coding_standards.rst  contributing.rst  macron_list_generation.rest  macron_list_generation.rst  old_english_ocr_pipeline.rst
oe_json_extractor/: __init__.py  exc.py  main.py  models.py  settings.py
oe_json_extractor/cli/: cli.py
oe_json_extractor/ingest/: __init__.py  exporters.py  extractors.py  loaders.py  normalizers.py  pipeline.py
oe_json_extractor/models/: __init__.py  llm.py  parsing.py  source_text.py
oe_json_extractor/prompts/: general.md  oe_extract_prose_v1.1.md  oe_extract_v1.1.md  oe_extract_v1.md  oe_extract_verse_v1.1.md  prose.md  verse.md
scripts/morphology/: __init__.py  generate_refactor_baseline.py  report_quality_guardrails.py
scripts/ocr/: __init__.py  benchmark_wright_live.py  benchmark_wright_matrix.py  old_english_ocr_pipeline.py  olmocr_hf.py
scripts/quality/: __init__.py  check_napoleon_gate.py
sources/: caedmon.txt  genesis_a_b.txt  judith.txt
tests/: conftest.py  ocr_metrics.py  test_bosworthtoller.py  test_cli_commands.py  test_cli_convert.py  test_cli_diacritic_disambiguate.py  test_cli_mark_diacritics.py  test_cli_morphology.py  test_cli_ocr.py  test_cli_utils.py  test_configuration.py  test_deterministic_regression.py  test_exporters.py  test_extractors.py  test_golden_regression.py  test_langextract_integration.py  test_llm.py  test_loaders.py  test_macron_index_builder.py  test_main.py  test_markup.py  test_ocr_live_integration.py  test_ocr_proxy.py  test_ocr_proxy_runtime.py  test_old_english_ocr_pipeline_olmocr.py  test_pipeline_classes.py  test_pipeline_llm.py  test_preparse_speaker_mixed.py  test_prompt_regression.py  test_settings_llm.py  test_tei_bridge.py
tests/fixtures/: alfred-gregory-pastoral-care.json  alfred-gregory-pastoral-care.txt  beowulf.json  beowulf.txt  beowulfOE.xml  caedmon.json  caedmon.txt  expected_dialogue.json  expected_poetry.json  expected_prose.json  fixture_dialogue.txt  fixture_poetry.txt  fixture_prose.txt  seafarer.json  seafarer.txt
tests/fixtures/definitions/: bt_belgan.json  bt_bell.json  bt_belt.json  bt_wundor.json  bt_wundorlice.json  bt_wyndecraeft.json  bt_yfel-sprecende.json  bt_yfel-wyrde.json  bt_ymbhumne copy.json  bt_æcer.json
tests/fixtures/morphology/: test_dict.txt
tests/fixtures/ocr/: wright1.md  wright2.md  wright3.md  wright4.md  wright5.md  wright_germanic_vowels.md  wright_introduction.md  wright_markup.md  wright_nouns.md  wright_nouns10.md  wright_nouns2.md  wright_nouns3.md  wright_nouns4.md  wright_nouns5.md  wright_nouns6.md  wright_nouns7.md  wright_nouns8.md  wright_nouns9.md  wright_phonology.md  wright_phonology2.md  wright_phonology3.md  wright_phonology4.md  wright_phonology5.md  wright_phonology6.md  wright_phonology7.md  wright_phonology8.md  wright_quality_thresholds.json  wright_skew_table.md  wright_table.md  wright_toc.md  wright_umlaut.md  wright_umlaut_skew.md
tests/morphology/: __init__.py  conftest.py  snapshot_io.py  test_assigner_branches.py  test_form_generation_reference.py  test_full_flow_reference.py  test_generation_branches.py  test_text_utils_reference.py
tests/morphology/data/: refactor_baseline.json
tests/python_reference/: snapshot_io.py  test_form_generation_reference.py  test_paradigm_reference.py  test_preprocess_reference.py  test_text_utils_reference.py
wyrdcraeft/: __init__.py  exc.py  main.py  settings.py
wyrdcraeft/cli/: __init__.py  cli.py  diacritic.py  diacritic_disambiguate.py  morphology.py  ocr.py  settings.py  source.py  utils.py
wyrdcraeft/etc/diacritic/: c_palatalization_force_non_palatalize.txt  c_palatalization_force_palatalize.txt  oe_bt_macron_index.json
wyrdcraeft/etc/morphology/: dict_adj-vb-part-num-adv-noun.txt  manual_forms.txt  (+2 more)
wyrdcraeft/ingest/: exporters.py  extractors.py  loaders.py  pipeline.py
wyrdcraeft/models/: __init__.py  bosworth_toller.py  diacritics.py  dictionary.py  llm.py  macron_index.py  morphology.py  parsing.py  source_text.py  syllable.py
wyrdcraeft/prompts/: Caltech_Internal_Enterprise_Email_Platform_Evaluation.docx  general.md  verse.md
wyrdcraeft/services/: bosworthtoller.py  dictionary.py  markup.py  syllable.py
(+40 files in other folders)
