[project]
name = "wyrdcraeft"
version = "1.0.0"
authors = [
    {name = "Chris Malek", email = "cmalek@placodermi.org"},
]
maintainers = [
    {name = "Chris Malek", email = "cmalek@placodermi.org"},
]
requires-python = ">=3.9,<3.14"
description = "A tool that processes Old English texts and provides a toolkit for working with the text."
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
dependencies = [
  "click >= 8.1.7",
  "rich >= 13.8.1",
  "pydantic>=2.10.6",
  "pydantic-settings >= 2.5.2",
  "build>=1.2.2.post1",
  "unstructured[all-docs]>=0.15",
  "langextract>=0.0.0",
  "any-llm-sdk[gemini,ollama,openai]",
  "httpx>=0.28.1",
  "delb>=0.5.1",
  "acdh-tei-pyutils>=1.6",
  "beautifulsoup4>=4.14.3",
  "pdfminer-six>=20260107",
  "wheel>=0.46.3",
]

[dependency-groups]
dev = [
  "ipython>=9.9.0",
  "icecream>=2.1.5",
  "mypy>=1.19.1",
  "ruff>=0.15.4",
]
docs = [
  "Sphinx>=7",
  "sphinx_rtd_theme == 2.0.0",
  "sphinxcontrib-images >= 0.9.4",
  "setuptools>=75.1.0",
  "autodoc-pydantic>=2.2.0",
]
test = [
  "pytest>=8.3.4",
  "pytest-click>=0.5.0",
  "pytest-cov>=6.0.0",
  "pytest-mock>=3.14.0",
  "pytest-env>=0.8.1",
  "pytest-timeout>=2.1.0",
  "pytest-xdist>=3.5.0",
  "pytest-randomly>=4.0.1",
]

[project.urls]
Respository = "https://github.com/cmalek/oe_json_extractor"
Documentation = "https://oe_json_extractor.readthedocs.io"
Issues = "https://github.com/cmalek/oe_json_extractor/issues"

[project.scripts]
wyrdcraeft = "wyrdcraeft.main:main"

[tool.uv]
python-preference = "only-system"
default-groups = ["docs", "test"]

[tool.setuptools]
# ...
# By default, include-package-data is true in pyproject.toml, so you do
# NOT have to specify this line.
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
wyrdcraeft = [
    "etc/diacritic/*.json",
    "etc/diacritic/*.txt",
    "etc/diacritic/*/*.txt",
    "etc/morphology/*.txt",
]

[build-system]
requires = [
    "setuptools >= 48",
    "wheel >= 0.29.0",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "llm: tests that require live LLM access (run with --run-llm)",
    "morphology: Morphology generator tests and reference contracts",
    "morphology_full: Optional full-dataset morphology smoke checks",
]

[tool.mypy]
plugins = "pydantic.mypy"
exclude = "^build"

[[tool.mypy.overrides]]
module = "setuptools.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sphinx_rtd_theme.*"
ignore_missing_imports = true

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    #### modules
    "ANN", # flake8-annotations
    "COM", # flake8-commas
    "C90", # mccabe complexity
    "EXE", # flake8-executable
    "T10", # debugger
    "TID", # flake8-tidy-imports

    #### specific rules
    "D100",   # ignore missing docs
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D203",
    "D205",
    "D212",
    "D400",
    "D401",
    "D415",
    "E402",   # false positives for local imports
    "S603",   # ignore subprocess calls that do not check return code
    "S607",   # ignore subprocess programs that are not absolute paths
    "TRY003", # external messages in exceptions are too verbose
    "T201",   # ignore print statements
    "TD002",
    "TD003",
    "FIX002", # too verbose descriptions of todos
    "SIM102", # combine nested ifs
    "UP006",  # stop bugging me about modern type hints
    "FBT001", # stop bugging me about booleans in function signatures
    "FBT002", # stop bugging me about booleans in function signatures
    "N818",   # stop bugging me about not ending my exceptions with "Error"
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
"tests/*.py" = ["S101"]
"wyrdcraeft/services/morphology/generators/common.py" = ["PLR0913", "D417", "PLR5501", "ARG002", "PLR2004", "PLC0415", "I001", "E501", "RUF100"]
"wyrdcraeft/services/morphology/generators/noun_forms.py" = ["ERA001"]
"wyrdcraeft/services/morphology/generators/adj_forms.py" = ["I001"]
"wyrdcraeft/services/morphology/reference_snapshots.py" = ["TC003", "PLR0913"]
"wyrdcraeft/services/morphology/text_utils.py" = ["RUF100"]

[tool.vulture]
# Configuration for vulture: https://github.com/jendrikseipp/vulture
# Install in your virtual environment and run:
# python -m vulture | tail -r | less
# The below configuration tries to remove some false positives, but there are
# still many, for example for model properties used only in templates.
# See also:
# https://adamj.eu/tech/2023/07/12/django-clean-up-unused-code-vulture/
exclude = [
  "test/*.py",
]
ignore_decorators = [
  # pytest
  "@pytest.fixture",
]
ignore_names = [
]
paths = [
  "oe_json_extractor",
]
min_confidence = 70
sort_by_size = true
